--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,26 +1,30 @@
 version: '3.7'
 
-#networks:
-#  lan:
+networks:
+  lan:
 
 services:
   consul:
     container_name: stringsvc-consul
     image: consul:1.6.1
-#    networks:
-#      - lan
+    networks:
+      - lan
     ports:
       - 8500:8500
-#    command: agent -server -ui  -bootstrap-expect=1 -client 0.0.0.0
+      - 8301:8301
+      - 8302:8302
+      - 8600:8600
+#    command: agent -server -ui  -bootstrap-expect=1 -bind 127.0.0.1 -client 0.0.0.0
 
   stringsvc:
     container_name: stringsvc
     build: docker/stringsvc
-#    networks:
-#      - lan
+    networks:
+      - lan
     links:
       - consul:consul
     depends_on:
       - consul
     ports:
       - 8080:8080
+      - 8081:8081
